<resources>
    <string name="app_name">Discussion</string>
    <string name="preference_file_key">ir.kawankfb</string>
    <string name="saved_access_token">access_token</string>
    <string name="log_in">log in</string>
    <string name="sign_up">sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="send_icon">"@drawable/baseline_send_white_48"</string>
    <string name="create">create</string>
    <string name="cancel">cancel</string>
    <string name="create_a_discussion">create a discussion</string>
    <string name="search">search</string>
    <string name="name">Name</string>
    <string name="confirm_npassword">Confirm\nPassword</string>
    <string name="my_image">profile image</string>
    <string name="kawan_farhadi_baneh">Kawan Farhadi baneh</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="spam">spam</string>
    <string name="trash">trash</string>
    <string name="all_mail">all mail</string>
    <string name="subheader">" sub header"</string>
    <string name="drafts">drafts</string>
    <string name="sent_mail">sent mail</string>
    <string name="starred">starred</string>
    <string name="inbox">inbox</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="choose_action">"Choose an action"</string>
    <string name="provide_explanation">Please provide an explanation for your report</string>
    <string name="send">send</string>
    <string name="explanation">Explanation</string>
    <string name="joined_at">Joined at :</string>
    <string name="report_this_user">Report this User</string>
    <string name="report_this_discussion">Report this discussion</string>
    <string name="created_at">Created at :</string>
    <string name="discussion_title">Discussion Title</string>
</resources>