<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:padding="16dp"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="@color/editTextBackground">



    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:id="@+id/user_profile_image_view"
        android:src="@drawable/profile_default"
        android:scaleType="centerCrop"
        android:contentDescription="@string/my_image"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigation_name_text_view"
        android:text="@string/kawan_farhadi_baneh"
        android:paddingTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigation_email_text_view"
        android:text="@string/example_gmail_com"
        android:paddingTop="4dp"/>


</LinearLayout>