<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ReportActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/report_toolbar"
        app:title="Report"
        android:background="@color/selectedTextview"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_height="?attr/actionBarSize">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_toolbar"
        android:textSize="18sp"
        android:paddingHorizontal="10sp"
        android:gravity="center"
        android:id="@+id/provide_report_explanation_text_view"
        android:text="@string/provide_explanation"
        android:minHeight="50sp"/>
    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/bg_edittext"
        android:layout_below="@id/provide_report_explanation_text_view"
        android:layout_margin="50sp"
        android:gravity="start"
        android:hint="@string/explanation"
        android:textColor="@color/textColor"
        android:id="@+id/report_explanation_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/report_choose_action_layout"

        android:layout_height="fill_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:minHeight="50sp"
        android:id="@+id/report_choose_action_layout"
        android:orientation="horizontal"
        android:layout_marginBottom="5sp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_margin="5sp"
            android:onClick="cancelReport"
            android:textColor="@color/colorBackground"
            android:background="@drawable/login_signup_button"
            android:text="@string/cancel"
            android:layout_height="match_parent"/>

        <Button
            android:layout_width="0sp"
            android:layout_weight="1"
            android:background="@drawable/login_signup_button"
            android:layout_margin="5sp"
            android:text="@string/send"
            android:textColor="@color/colorBackground"
            android:onClick="sendReport"
            android:layout_height="match_parent"/>
    </LinearLayout>

</RelativeLayout>