<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".CreateDiscussionActivity">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/create_discussion_toolbar"
        android:layout_height="wrap_content">

    </Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:background="@color/colorBackground"
        android:layout_below="@id/create_discussion_toolbar"
        android:layout_marginTop="100sp"
        android:text="@string/discussion_title"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/create_discussion_title_text_view"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="wrap_content"
        android:minWidth="250sp"
        android:background="@drawable/bg_edittext"
        android:maxWidth="350sp"
        android:hint="@string/discussion_title"
        android:layout_below="@id/create_discussion_title_text_view"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:id="@+id/create_discussion_title"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:minHeight="50sp"
        android:orientation="horizontal"
        android:layout_marginBottom="5sp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_margin="5sp"
            android:onClick="cancelCreatingDiscussion"
            android:background="@drawable/login_signup_button"
            android:text="@string/cancel"
            android:layout_height="match_parent"/>

        <Button
            android:layout_width="0sp"
            android:layout_weight="1"
            android:background="@drawable/login_signup_button"
            android:layout_margin="5sp"
            android:text="@string/create"
            android:onClick="createDiscussion"
            android:layout_height="match_parent"/>
    </LinearLayout>
</RelativeLayout>