<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".AuthenticationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/login_layout"
        android:layout_alignBottom="@+id/login_signup_layout"
        android:layout_alignParentTop="true"
        android:visibility="visible"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/login"
                    android:textSize="50sp"
                    android:paddingHorizontal="30sp"
                    android:textStyle="italic"
                    android:layout_weight="0.5"
                    android:layout_height="0dp">

                </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp"
                android:layout_marginTop="70sp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:textSize="30sp"
                    android:textStyle="italic"
                    android:paddingHorizontal="30sp"
                    android:text="@string/email"
                    android:layout_height="0dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:hint="@string/email"
                    android:layout_marginHorizontal="30sp"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/textColor"
                    android:id="@+id/emailEditText"
                    android:inputType="textEmailAddress"
                    android:layout_height="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp"
                android:layout_marginTop="70sp"
                android:layout_marginBottom="70sp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    android:paddingHorizontal="30sp"
                    android:text="@string/password"
                    android:layout_height="0dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:hint="@string/password"
                    android:layout_marginHorizontal="30sp"
                    android:textColor="@color/textColor"
                    android:background="@drawable/bg_edittext"
                    android:id="@+id/passwordEditText"
                    android:inputType="textPassword"
                    android:layout_height="0dp"/>
            </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/login_signup_button"
                    android:onClick="login"
                    android:textSize="20sp"
                    android:textColor="@color/colorBackground"
                    android:layout_marginHorizontal="150sp"
                    android:layout_marginBottom="100sp"
                    android:text="@string/log_in"/>


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/signup_layout"
        android:layout_alignBottom="@+id/login_signup_layout"
        android:layout_alignParentTop="true"
        android:visibility="invisible"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/sign_up"
                android:textSize="50sp"
                android:paddingHorizontal="30sp"
                android:textStyle="italic"
                android:layout_weight="0.5"
                android:layout_height="0dp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="0dp"
                android:layout_marginTop="70sp"
                android:layout_weight="0.3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:text="@string/name"
                    android:layout_height="match_parent"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:hint="@string/name"
                    android:layout_marginHorizontal="30sp"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/textColor"
                    android:id="@+id/nameEditText"
                    android:inputType="textPersonName"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="0dp"
                android:layout_marginTop="70sp"
                android:layout_weight="0.3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:text="@string/email"
                    android:layout_height="match_parent"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:hint="@string/email"
                    android:layout_marginHorizontal="30sp"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/textColor"
                    android:id="@+id/signUpEmailEditText"
                    android:inputType="textEmailAddress"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="0dp"
                android:layout_marginTop="70sp"
                android:layout_weight="0.3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:text="@string/password"
                    android:layout_height="match_parent"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:hint="@string/password"
                    android:layout_marginHorizontal="30sp"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/textColor"
                    android:id="@+id/signUpPasswordEditText"
                    android:inputType="textPassword"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="0dp"
                android:layout_marginTop="70sp"
                android:layout_weight="0.3">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:text="@string/confirm_npassword"
                    android:layout_height="match_parent"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:hint="@string/password"
                    android:layout_marginHorizontal="30sp"
                    android:background="@drawable/bg_edittext"
                    android:textColor="@color/textColor"
                    android:id="@+id/signUpConfirmPasswordEditText"
                    android:inputType="textPassword"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="@drawable/login_signup_button"
                android:onClick="signUp"
                android:textSize="20sp"
                android:textColor="@color/colorBackground"
                android:layout_marginHorizontal="150sp"
                android:layout_marginBottom="100sp"
                android:layout_marginTop="50sp"
                android:text="@string/sign_up"/>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:orientation="horizontal"
        android:id="@+id/login_signup_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="30sp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:id="@+id/login_text_view"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textColor="@color/selectedTextview"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:onClick="loadLoginLayout"
            android:textAlignment="center"
            android:text="@string/log_in" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:id="@+id/signup_textview"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:onClick="loadSignUpLayout"
            android:text="@string/sign_up" />
    </LinearLayout>

</RelativeLayout>